Fix product detail zoom on mobile

--- a/wp-content/themes/sutunam/css/style.css
+++ b/wp-content/themes/sutunam/css/style.css
@@ -6849,6 +6849,16 @@ h6 {
   max-height: 768px;
 }
 
+/* line 943, d:/xampp/htdocs/cozaro/wp-content/themes/sutunam/scss/page/_product-detail.scss */
+
+.single-product .zoomContainer .zoomClose {
+  color: #000000;
+  font-size: 14px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
 @media only screen and (max-width: 1199px) {
   /* line 936, d:/xampp/htdocs/cozaro/wp-content/themes/sutunam/scss/page/_product-detail.scss */
 
@@ -6865,7 +6875,7 @@ h6 {
     filter: alpha(opacity=0);
   }
 
-  /* line 953, d:/xampp/htdocs/cozaro/wp-content/themes/sutunam/scss/page/_product-detail.scss */
+  /* line 960, d:/xampp/htdocs/cozaro/wp-content/themes/sutunam/scss/page/_product-detail.scss */
 
   .single-product .zoomContainer img {
     width: auto;
@@ -6874,7 +6884,7 @@ h6 {
 }
 
 @media only screen and (max-width: 767px) {
-  /* line 959, d:/xampp/htdocs/cozaro/wp-content/themes/sutunam/scss/page/_product-detail.scss */
+  /* line 966, d:/xampp/htdocs/cozaro/wp-content/themes/sutunam/scss/page/_product-detail.scss */
 
   .single-product .zoomContainer img {
     max-width: 767px;
