--- a/wp-content/themes/sutunam/scss/page/_product-detail.scss
+++ b/wp-content/themes/sutunam/scss/page/_product-detail.scss
@@ -940,6 +940,13 @@
             cursor: url("../images/zoom-out-cursor.png"), zoom-out !important;
             max-height: $product-img-height;
         }
+        .zoomClose {
+            color: $black;
+            font-size: 14px;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
         @include bp(max-width, $desktop - 1) {
             background: $white;
             height: 100%;
